SummonerServiceTest getFirst, list.of